organise css, new arrow layout

--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ body {
 	background-size: auto;
 }
 
-.slide-container {
+.main-container {
 	position: absolute;
 	bottom: 0%;
 	width: 100%;
 	height: 35%;
 }
 
-.class-container {
+.category-container {
 	width: 100%;
 	height: 15%;
 	display: flex;
@@ -20,7 +20,7 @@ body {
 	flex-wrap: nowrap;
 }
 
-.class-item {
+.category-container .item {
 	flex: 1;
 	width: 20%;
 	height: 100%;	
@@ -30,35 +30,33 @@ body {
 	font-size: medium;
 }
 
-.class-item:hover {
+.category-container .item:hover {
 	background-color: rgb(52, 152, 219);
 	color: white;
 }
 
-.class-item.class-selected {
+.category-container .item.selected {
 	background-color: rgb(52, 152, 219);
 	color: white;
 }
 
-.class-item:nth-child(even) {
+.category-container .item:nth-child(even) {
 	border-left: none;
 	border-right: none;
 }
 
-.class-item:first-child {
+.category-container .item:first-child {
 	border-left: none;
 }
 
-.class-item:last-child {
+.category-container .item:last-child {
 	border-right: none;
 }
 
-.veh-item-container {
+.slider-container {
 	width: 100%;
 	height: 85%;
 	background-color: rgba(140, 140, 140, 0.8);
-	/* top: 50%;
-	transform: translateY(-50%); */
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -66,7 +64,17 @@ body {
 	align-items: center;
 }
 
-.veh-item {
+.slider-container .item-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.slider-container .item-container .item {
 	position: relative;
 	flex: 1;
 	width: 25%;
@@ -77,14 +85,11 @@ body {
 	margin-right: 5px;
 }
 
-.veh-item:hover {
+.slider-container .item-container .item:hover {
 	border-color: #3498DB;
-	width: 40%;
-	height: 85%;
-	flex-grow: 1.08;
 }
 
-.veh-item.veh-selected {
+.slider-container .item-container .item.selected {
 	width: 40%;
 	height: 95%;
 	flex-grow: 1.2;
@@ -92,12 +97,12 @@ body {
 	border-width: 3px;
 }
 
-.veh-item img {
+.slider-container .item-container .item img {
 	width: 100%;
 	height: 100%;
 }
 
-.veh-item div {
+.slider-container .item-container .item div {
 	position: absolute;
 	bottom: 0%;
 	left: 0%;
@@ -109,37 +114,43 @@ body {
 	transition: all 0.3s ease;
 }
 
-.veh-item.veh-selected div {
+.slider-container .item-container .item.selected div {
 	background-color: #3498DB;
 }
 
-.veh-item:hover div {
+.slider-container .item-container .item:hover div {
 	background-color: #3498DB;
 }
 
-.veh-arrow {
+.slider-container .arrow-container {
+	position: relative;
+	height: 100%;
+	width: 5%;
+	flex-grow: 1;
+}
+
+.slider-container .arrow-container .arrow {
 	position: absolute;
-	display: inline-block;
-	width: 75px;
-	height: 75px;
+	top: 50%;
+	left: 50%;
+	width: 25%;
+	aspect-ratio: 1/1;
 	border: solid rgba(0, 0, 0, 0.5);
-	border-width: 0 15px 15px 0;	
-	padding: 3px;
+	border-width: 0 10px 10px 0;	
+	padding: 5px;
 	z-index: 1;
 }
 
-.veh-arrow:hover {
+.slider-container .arrow-container:hover .arrow {
 	border-color: rgba(0, 0, 0, 0.8);
 }
 
-.veh-arrow.left {
-	left: 2%;
-	transform: rotate(135deg);
+.slider-container .arrow-container .arrow.left {
+	transform: translateX(-20%) translateY(-50%) rotate(135deg);
 }
 
-.veh-arrow.right {
-	right: 2%;
-	transform: rotate(-45deg);
+.slider-container .arrow-container .arrow.right {
+	transform: translateX(-80%) translateY(-50%) rotate(-45deg);
 }
 
 .info-container {
