--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 	margin: 0px;
 	background-image: url("../img/bg.png");
 	background-size: auto;
+	overflow: hidden;
 }
 
 .main-container {
@@ -28,6 +29,7 @@ body {
 	background-color: rgb(245, 245, 245);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: medium;
+	transition: all 0.2s ease;
 }
 
 .category-container .item:hover {
@@ -37,6 +39,12 @@ body {
 
 .category-container .item.selected {
 	background-color: rgb(52, 152, 219);
+	color: white;
+}
+
+.category-container .item.selected.active {
+	background-color: rgba(25, 117, 179, 70);
+	border-color: rgba(25, 117, 179, 70);
 	color: white;
 }
 
@@ -97,6 +105,10 @@ body {
 	border-width: 3px;
 }
 
+.slider-container .item-container .item.selected.active {
+	border-color: rgba(25, 117, 179, 70);
+}
+
 .slider-container .item-container .item img {
 	width: 100%;
 	height: 100%;
@@ -116,6 +128,10 @@ body {
 
 .slider-container .item-container .item.selected div {
 	background-color: #3498DB;
+}
+
+.slider-container .item-container .item.selected.active div {
+	background-color: rgba(25, 117, 179, 70);
 }
 
 .slider-container .item-container .item:hover div {
