--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,7 +1,7 @@
 body {
 	padding: 0px;
 	margin: 0px;
-	background-image: url("../img/bg.png");
+	/* background-image: url("../img/bg.png"); */
 	background-size: auto;
 	overflow: hidden;
 }
