--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -88,9 +88,9 @@ body {
 	width: 25%;
 	height: 80%;
 	border: 2px solid;
-	transition: all 0.2s ease;
 	margin-left: 5px;
 	margin-right: 5px;
+	transition: all 0.2s ease-in-out, visibility .1ms;
 }
 
 .slider-container .item-container .item:hover {
@@ -123,7 +123,7 @@ body {
 	background-color: black;
 	color: white;
 	padding: 2.5px;
-	transition: all 0.3s ease;
+	transition: all 0.2s ease-in-out, visibility .1ms;
 }
 
 .slider-container .item-container .item.selected div {
