--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -10,7 +10,7 @@ body {
 	position: absolute;
 	bottom: 0%;
 	width: 100%;
-	height: 35%;
+	height: 28%;
 }
 
 .category-container {
@@ -86,7 +86,6 @@ body {
 	position: relative;
 	flex: 1;
 	width: 25%;
-	height: 80%;
 	border: 2px solid;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -99,7 +98,6 @@ body {
 
 .slider-container .item-container .item.selected {
 	width: 40%;
-	height: 95%;
 	flex-grow: 1.2;
 	border-color: #3498DB;
 	border-width: 3px;
@@ -112,6 +110,7 @@ body {
 .slider-container .item-container .item img {
 	width: 100%;
 	height: 100%;
+	display: block;
 }
 
 .slider-container .item-container .item div {
