--- a/ui/css/slider.css
+++ b/ui/css/slider.css
@@ -55,7 +55,7 @@
 	bottom: 0%;
 	left: 0%;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: larger;
+	font-size: 1rem;
 	background-color: black;
 	color: white;
 	padding: 2.5px;
@@ -103,4 +103,44 @@
 
 .slider-container .arrow-container .arrow.right {
 	transform: translateX(-80%) translateY(-50%) rotate(-45deg);
+}
+
+@media only screen and (min-width: 768px) {
+	.slider-container {
+		height: 78%;
+	}
+
+	.slider-container .item-container .item div {
+		font-size: 0.7rem;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.slider-container {
+		height: 82%;
+	}
+
+	.slider-container .item-container .item div {
+		font-size: 1.1rem;
+	}
+}
+
+@media screen and (min-width: 1921px) {
+	.slider-container {
+		height: 86%;
+	}
+
+	.slider-container .item-container .item div {
+		font-size: 1.4rem;
+	}
+}
+
+@media screen and (min-width: 2561px) {
+	.slider-container {
+		height: 86%;
+	}
+
+	.slider-container .item-container .item div {
+		font-size: 2.4rem;
+	}
 }
