--- a/ui/css/info.css
+++ b/ui/css/info.css
@@ -7,3 +7,59 @@
 	height: 40%;
 	background-color: rgba(0, 0, 0, 0.24);
 }
+
+.stats-container {
+	position: absolute;
+	display: flex;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 35%;
+	height: 25%;
+	background-color: rgba(0, 0, 0, 0.729411764706);
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 2%;
+	padding: 0% 1% 0% 1%;
+}
+
+.stats-container .item {
+	display: flex;
+	width: 100%;
+	height: 23%;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.stats-container .item .label {
+	color:rgba(245, 245, 245, 0.960784313725);
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.3rem;
+	width: 31%;
+}
+
+.stats-container .item .bar-container {
+	display: flex;
+	height: 90%;
+	width: 60%;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: space-evenly;
+	gap: 1%;
+	flex-grow: 1;
+}
+
+.stats-container .item .bar-container .bar {
+	width: 20%;
+	height: 22%;
+	background-color: rgba(240, 240, 240, 0.298039215686);
+}
+
+.stats-container .item .bar-container .bar .fill {
+	width: 0%;
+	height: 100%;
+	background-color: rgb(240, 240, 240);
+}
