--- a/ui/css/info.css
+++ b/ui/css/info.css
@@ -14,8 +14,11 @@
 }
 
 .info-container .heading {
-	color:rgba(245, 245, 245, 0.960784313725);
+	display: flex;
+	color: rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 2.3rem;
+	font-size: 2.3em;
 	padding: 2% 2% 0% 2%;
+	height: 15%;
+	align-items: center;
 }
