--- a/ui/css/info.css
+++ b/ui/css/info.css
@@ -22,3 +22,17 @@
 	height: 15%;
 	align-items: center;
 }
+
+.info-button {
+	flex-grow: 1;
+	background: none;
+	border: none;
+	border-top: 2px solid rgba(245, 245, 245, 0.960784313725);
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 2em;
+	color:rgba(245, 245, 245, 0.960784313725);
+}
+
+.info-button:hover {
+	background-color: rgba(240, 240, 240, 0.298039215686);
+}
