--- a/ui/css/navbar.css
+++ b/ui/css/navbar.css
@@ -1,4 +1,4 @@
-.category-container {
+.navbar {
 	width: 100%;
 	height: 15%;
 	display: flex;
@@ -6,10 +6,9 @@
 	flex-wrap: nowrap;
 }
 
-.category-container .item {
+.navbar .item {
 	flex: 1;
 	width: 20%;
-	height: 100%;	
 	border: 2px solid rgb(52, 152, 219);
 	background-color: rgb(245, 245, 245);
 	font-family: Arial, Helvetica, sans-serif;
@@ -17,71 +16,71 @@
 	transition: all 0.2s ease;
 }
 
-.category-container .item:hover {
+.navbar .item:hover {
 	background-color: rgb(52, 152, 219);
 	color: white;
 }
 
-.category-container .item.selected {
+.navbar .item.selected {
 	background-color: rgb(52, 152, 219);
 	color: white;
 }
 
-.category-container .item.selected.active {
+.navbar .item.selected.active {
 	background-color: rgba(25, 117, 179, 70);
 	border-color: rgba(25, 117, 179, 70);
 	color: white;
 }
 
-.category-container .item:nth-child(even) {
+.navbar .item:nth-child(even) {
 	border-left: none;
 	border-right: none;
 }
 
-.category-container .item:first-child {
+.navbar .item:first-child {
 	border-left: none;
 }
 
-.category-container .item:last-child {
+.navbar .item:last-child {
 	border-right: none;
 }
 
 @media only screen and (min-width: 768px) {
-	.category-container {
+	.navbar {
 		height: 22%;
 	}
 
-	.category-container .item {
+	.navbar .item {
 		font-size: 0.9rem;
 	}
 }
 
 @media screen and (min-width: 1200px) {
-	.category-container {
+	.navbar {
 		height: 18%;
 	}
 
-	.category-container .item {
+	.navbar .item {
 		font-size: 1.09rem;
 	}
 }
 
 @media screen and (min-width: 1921px) {
-	.category-container {
+	.navbar {
 		height: 15%;
 	}
 
-	.category-container .item {
+	.navbar .item {
 		font-size: 1.4rem;
 	}
 }
 
 @media screen and (min-width: 2561px) {
-	.category-container {
+	.navbar {
 		height: 15%;
 	}
 
-	.category-container .item {
+	.navbar .item {
 		font-size: 2.4rem;
 	}
 }
