--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -11,6 +11,7 @@ body {
 	bottom: 0%;
 	width: 100%;
 	height: 25%;
+	background-color: rgba(0, 0, 0, 0.729411764706);
 }
 
 @media screen and (min-width: 1200px) {
