--- a/ui/css/navbar.css
+++ b/ui/css/navbar.css
@@ -1,48 +1,44 @@
 .navbar {
+	display: flex;
+
 	width: 100%;
 	height: 15%;
-	display: flex;
+
 	flex-direction: row;
 	flex-wrap: nowrap;
+
+	border-bottom: 2px solid rgba(245, 245, 245, 0.4);
 }
 
 .navbar .item {
-	flex: 1;
-	width: 20%;
-	border: 2px solid rgb(52, 152, 219);
-	background-color: rgb(245, 245, 245);
+	display: flex;
+
+	width: 10%;
+	
+	color: rgb(245, 245, 245);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: medium;
+
 	transition: all 0.2s ease;
+
+	align-items: center;
+	justify-content: center;
 }
 
 .navbar .item:hover {
-	background-color: rgb(52, 152, 219);
-	color: white;
+	background-color: rgba(240, 240, 240, 0.4);
+	
+	color: rgba(0, 0, 0, 0.729411764706);
 }
 
 .navbar .item.selected {
-	background-color: rgb(52, 152, 219);
-	color: white;
+	background-color: rgba(240, 240, 240, 0.4);
+	color: black;
 }
 
 .navbar .item.selected.active {
-	background-color: rgba(25, 117, 179, 70);
-	border-color: rgba(25, 117, 179, 70);
-	color: white;
-}
-
-.navbar .item:nth-child(even) {
-	border-left: none;
-	border-right: none;
-}
-
-.navbar .item:first-child {
-	border-left: none;
-}
-
-.navbar .item:last-child {
-	border-right: none;
+	background-color: rgba(240, 240, 240, 0.4);
+	color: black;
 }
 
 @media only screen and (min-width: 768px) {
