feat(ui/slider): .slider-container -> .slider

--- a/ui/css/slider.css
+++ b/ui/css/slider.css
@@ -1,4 +1,4 @@
-.slider-container {
+.slider {
 	width: 100%;
 	height: 85%;
 	display: flex;
@@ -8,7 +8,7 @@
 	align-items: center;
 }
 
-.slider-container .item-container {
+.slider .item-container {
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -18,7 +18,7 @@
 	align-items: center;
 }
 
-.slider-container .item-container .item {
+.slider .item-container .item {
 	position: relative;
 	flex: 1;
 	width: 25%;
@@ -28,28 +28,28 @@
 	transition: all 0.2s ease-in-out, visibility .1ms;
 }
 
-.slider-container .item-container .item:hover {
+.slider .item-container .item:hover {
 	border-color: #3498DB;
 }
 
-.slider-container .item-container .item.selected {
+.slider .item-container .item.selected {
 	width: 40%;
 	flex-grow: 1.2;
 	border-color: #3498DB;
 	border-width: 3px;
 }
 
-.slider-container .item-container .item.selected.active {
+.slider .item-container .item.selected.active {
 	border-color: rgba(25, 117, 179, 70);
 }
 
-.slider-container .item-container .item img {
+.slider .item-container .item img {
 	width: 100%;
 	height: 100%;
 	display: block;
 }
 
-.slider-container .item-container .item div {
+.slider .item-container .item div {
 	position: absolute;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1rem;
@@ -59,36 +59,36 @@
 	transition: all 0.2s ease-in-out, visibility .1ms;
 }
 
-.slider-container .item-container .item div.name {
+.slider .item-container .item div.name {
 	bottom: 0%;
 	left: 0%;
 }
 
-.slider-container .item-container .item div.price {
+.slider .item-container .item div.price {
 	top: 0%;
 	right: 0%;
 }
 
-.slider-container .item-container .item.selected div {
+.slider .item-container .item.selected div {
 	background-color: #3498DB;
 }
 
-.slider-container .item-container .item.selected.active div {
+.slider .item-container .item.selected.active div {
 	background-color: rgba(25, 117, 179, 70);
 }
 
-.slider-container .item-container .item:hover div {
+.slider .item-container .item:hover div {
 	background-color: #3498DB;
 }
 
-.slider-container .arrow-container {
+.slider .arrow-container {
 	position: relative;
 	height: 100%;
 	width: 5%;
 	flex-grow: 1;
 }
 
-.slider-container .arrow-container .arrow {
+.slider .arrow-container .arrow {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -100,54 +100,54 @@
 	z-index: 1;
 }
 
-.slider-container .arrow-container:hover .arrow {
+.slider .arrow-container:hover .arrow {
 	border-color: rgba(0, 0, 0, 0.8);
 }
 
-.slider-container .arrow-container .arrow.left {
+.slider .arrow-container .arrow.left {
 	transform: translateX(-20%) translateY(-50%) rotate(135deg);
 }
 
-.slider-container .arrow-container .arrow.right {
+.slider .arrow-container .arrow.right {
 	transform: translateX(-80%) translateY(-50%) rotate(-45deg);
 }
 
 @media only screen and (min-width: 768px) {
-	.slider-container {
+	.slider {
 		height: 78%;
 	}
 
-	.slider-container .item-container .item div {
+	.slider .item-container .item div {
 		font-size: 0.7rem;
 	}
 }
 
 @media screen and (min-width: 1200px) {
-	.slider-container {
+	.slider {
 		height: 82%;
 	}
 
-	.slider-container .item-container .item div {
+	.slider .item-container .item div {
 		font-size: 1.1rem;
 	}
 }
 
 @media screen and (min-width: 1921px) {
-	.slider-container {
+	.slider {
 		height: 86%;
 	}
 
-	.slider-container .item-container .item div {
+	.slider .item-container .item div {
 		font-size: 1.4rem;
 	}
 }
 
 @media screen and (min-width: 2561px) {
-	.slider-container {
+	.slider {
 		height: 86%;
 	}
 
-	.slider-container .item-container .item div {
+	.slider .item-container .item div {
 		font-size: 2.4rem;
 	}
 }
