--- a/ui/css/slider.css
+++ b/ui/css/slider.css
@@ -26,7 +26,7 @@
 	border: 2px solid;
 	margin-left: 5px;
 	margin-right: 5px;
-	transition: all 0.2s ease-in-out, display .1ms;
+	transition: all 0.2s ease-in-out;
 }
 
 .slider .item-container .item:hover {
@@ -38,14 +38,14 @@
 }
 
 .slider .item-container .item.selected {
-	width: 40%;
 	flex-grow: 1.2;
 	border-color: #3498DB;
 	border-width: 3px;
+	transition: all 0.2s ease-in-out;
 }
 
-.slider .item-container .item.selected.active {
-	border-color: rgba(25, 117, 179, 70);
+.slider .item-container .item.previous {
+	transition: none;
 }
 
 .slider .item-container .item img {
