--- a/ui/css/stats.css
+++ b/ui/css/stats.css
@@ -1,4 +1,4 @@
-.stats-container {
+.stats {
 	position: relative;
 	display: flex;
 	height: 40%;
@@ -9,7 +9,7 @@
 	padding: 0% 2% 0% 2%;
 }
 
-.stats-container .item {
+.stats .item {
 	display: flex;
 	width: 100%;
 	height: 23%;
@@ -19,14 +19,14 @@
 	justify-content: space-between;
 }
 
-.stats-container .item .label {
+.stats .item .label {
 	color:rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.3rem;
 	flex: 1;
 }
 
-.stats-container .item .bar-container {
+.stats .item .bar-container {
 	display: flex;
 	height: 100%;
 	flex-direction: row;
@@ -37,13 +37,13 @@
 	flex: 1;
 }
 
-.stats-container .item .bar-container .bar {
+.stats .item .bar-container .bar {
 	width: 20%;
 	height: 25%;
 	background-color: rgba(240, 240, 240, 0.298039215686);
 }
 
-.stats-container .item .bar-container .bar .fill {
+.stats .item .bar-container .bar .fill {
 	width: 0%;
 	height: 100%;
 	background-color: rgb(240, 240, 240);
