--- a/ui/css/vehicle-panel.css
+++ b/ui/css/vehicle-panel.css
@@ -1,4 +1,4 @@
-.info-container {
+.vehicle-panel {
 	position: absolute;
 	display: flex;
 	top: 32.5%;
@@ -13,7 +13,7 @@
 
 }
 
-.info-container .heading {
+.vehicle-panel .heading {
 	display: flex;
 	color: rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
@@ -23,7 +23,7 @@
 	align-items: center;
 }
 
-.info-button {
+.vehicle-panel .button {
 	flex-grow: 1;
 	background: none;
 	border: none;
@@ -32,6 +32,6 @@
 	color:rgba(245, 245, 245, 0.960784313725);
 }
 
-.info-button:hover {
+.vehicle-panel .button:hover {
 	background-color: rgba(240, 240, 240, 0.298039215686);
 }
