--- a/ui/css/stats.css
+++ b/ui/css/stats.css
@@ -1,50 +1,71 @@
-.stats {
+.stats 
+{
 	position: relative;
 	display: flex;
+
 	height: 40%;
-	/* background-color: rgba(0, 0, 0, 0.729411764706); */
+
 	flex-direction: column;
 	flex-wrap: wrap;
+
 	gap: 2%;
 	padding: 0% 2% 0% 2%;
 }
 
-.stats .item {
+.stats .item 
+{
 	display: flex;
+
 	width: 100%;
 	height: 23%;
+
 	flex-direction: row;
 	flex-wrap: nowrap;
+
 	align-items: center;
 	justify-content: space-between;
+
+	gap: 2%;
 }
 
-.stats .item .label {
+.stats .item .label 
+{
+	flex: 1;
+
 	color:rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.3rem;
-	flex: 1;
 }
 
-.stats .item .bar-container {
+.stats .item .bar-container 
+{
 	display: flex;
+
 	height: 100%;
+
+	flex: 1;
 	flex-direction: row;
 	flex-wrap: nowrap;
+
 	align-items: center;
 	justify-content: space-evenly;
+
 	gap: 2px;
-	flex: 1;
 }
 
-.stats .item .bar-container .bar {
-	flex: 1;
+.stats .item .bar-container .bar 
+{
 	height: 25%;
+
+	flex: 1;
+
 	background-color: rgba(240, 240, 240, 0.298039215686);
 }
 
-.stats .item .bar-container .bar .fill {
+.stats .item .bar-container .bar .fill 
+{
 	width: 0%;
 	height: 100%;
+
 	background-color: rgb(240, 240, 240);
 }
