--- a/ui/css/vehicle-panel.css
+++ b/ui/css/vehicle-panel.css
@@ -1,4 +1,5 @@
-.vehicle-panel {
+.vehicle-panel
+{
 	position: absolute;
 	display: flex;
 
@@ -18,7 +19,8 @@
 	background-color: rgba(0, 0, 0, 0.729411764706);
 }
 
-.vehicle-panel .heading {
+.vehicle-panel .heading
+{
 	display: flex;
 
 	height: 15%;
@@ -32,13 +34,15 @@
 	align-items: center;
 }
 
-.vehicle-panel .heading div {
+.vehicle-panel .heading div
+{
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
-.vehicle-panel .button {
+.vehicle-panel .button
+{
 	flex-grow: 1;
 
 	color:rgba(245, 245, 245, 0.960784313725);
@@ -49,6 +53,7 @@
 	border: none;
 }
 
-.vehicle-panel .button:hover {
+.vehicle-panel .button:hover
+{
 	background-color: rgba(240, 240, 240, 0.298039215686);
 }
