--- a/ui/css/stats.css
+++ b/ui/css/stats.css
@@ -1,26 +1,20 @@
 .stats 
 {
-	position: relative;
 	display: flex;
-
-	height: 40%;
 
 	flex-direction: column;
 	flex-wrap: wrap;
 
-	gap: 2%;
-	padding: 0% 2% 0% 2%;
+	gap: 0.8rem;
+	padding: 0.5rem;
 }
 
 .stats .item 
 {
 	display: flex;
 
-	width: 100%;
-	height: 23%;
-
 	flex-direction: row;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 
 	align-items: center;
 	justify-content: space-between;
@@ -41,11 +35,9 @@
 {
 	display: flex;
 
-	height: 100%;
-
 	flex: 1;
 	flex-direction: row;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 
 	align-items: center;
 	justify-content: space-evenly;
@@ -55,7 +47,8 @@
 
 .stats .item .bar-container .bar 
 {
-	height: 25%;
+	width: 35px;
+	height: 8px;
 
 	flex: 1;
 
