--- a/ui/css/stats.css
+++ b/ui/css/stats.css
@@ -29,6 +29,8 @@
 	color:rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.3rem;
+
+	white-space: nowrap;
 }
 
 .stats .item .bar-container 
