--- a/ui/css/vehicle-panel.css
+++ b/ui/css/vehicle-panel.css
@@ -49,7 +49,8 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 2em;
 
-	background: none;
+	background-color: rgba(240, 240, 240, 0.493);
+	margin: 0px 8px;
 	border: none;
 }
 
