--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -31,3 +31,65 @@
 
 	font-size: 2.3rem;
 }
+
+.widget.stats
+{
+	width: 25%;
+
+	flex-direction: column;
+	flex-wrap: nowrap;
+
+	font-size: 2.1rem;
+
+	gap: 8px;
+}
+
+@media only screen and (min-width: 768px)
+{
+	.widget.stats
+	{
+		width: 12%;
+	}
+}
+
+@media screen and (min-width: 1000px)
+{
+	.widget.stats
+	{
+		width: 27%;
+	}
+}
+
+@media screen and (min-width: 1200px)
+{
+	.widget.stats
+	{
+		width: 25%;
+	}
+}
+
+@media screen and (min-width: 1440px)
+{
+	.widget.stats
+	{
+		width: 18%;
+	}
+}
+
+@media screen and (min-width: 1921px)
+{
+	.widget.stats
+	{
+		width: 13%;
+	}
+}
+
+@media screen and (min-width: 2561px)
+{
+	.widget.stats
+	{
+		width: 14%;
+
+		font-size: 2.5rem;
+	}
+}
