--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -44,6 +44,23 @@
 	gap: 8px;
 }
 
+.widget.select-btn
+{
+	width: 15%;
+
+	align-items: center;
+	justify-content: center;
+
+	font-size: 2.8rem;
+
+	border: none;
+}
+
+.widget.select-btn:hover
+{
+	color: rgba(245, 245, 245, 0.298039215686);
+}
+
 @media only screen and (min-width: 768px)
 {
 	.widget.stats
