--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -10,6 +10,16 @@
 	background-color: rgba(0, 0, 0, 0.729411764706);
 }
 
+.widget.transparent
+{
+	background-color: transparent;
+}
+
+.widget.gap
+{
+	gap: 8px;
+}
+
 .widget.bottom
 {
 	position: absolute;
