--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -46,12 +46,11 @@
 {
 	width: 25%;
 
+	flex: 1;
 	flex-direction: column;
 	flex-wrap: nowrap;
 
 	font-size: 2.1rem;
-
-	gap: 8px;
 }
 
 .widget.select-btn
