--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -29,7 +29,7 @@
 	margin: 8px;
 }
 
-.widget.bottom.right
+.widget.right
 {
 	right: 0;
 }
@@ -86,6 +86,27 @@
 }
 
 .widget.select-btn:hover
+{
+	color: rgba(245, 245, 245, 0.298039215686);
+}
+
+.widget.close-btn
+{
+	position: absolute;
+
+	width: 4%;
+
+	align-items: center;
+	justify-content: center;
+
+	font-size: 2.3rem;
+
+	border: none;
+
+	transform: rotate(45deg);
+}
+
+.widget.close-btn:hover
 {
 	color: rgba(245, 245, 245, 0.298039215686);
 }
