--- a/ui/css/widgets.css
+++ b/ui/css/widgets.css
@@ -130,6 +130,13 @@
 	{
 		width: 12%;
 	}
+
+	.widget.select-btn
+	{
+		width: 25%;
+
+		font-size: 2.1rem;
+	}
 }
 
 @media screen and (min-width: 1000px)
@@ -151,6 +158,13 @@
 	{
 		width: 25%;
 	}
+
+	.widget.select-btn
+	{
+		width: 20%;
+
+		font-size: 2.5rem;
+	}
 }
 
 @media screen and (min-width: 1440px)
@@ -167,10 +181,34 @@
 	{
 		width: 13%;
 	}
+
+	.widget.select-btn
+	{
+		width: 18%;
+
+		font-size: 2.8rem;
+	}
 }
 
 @media screen and (min-width: 2561px)
 {
+	.widget.label
+	{
+		font-size: 3.8rem;
+	}
+
+	.widget.close-btn
+	{
+		font-size: 3.8rem;
+	}
+
+	.widget.select-btn
+	{
+		width: 20%;
+
+		font-size: 4.8rem;
+	}
+
 	.widget.stats
 	{
 		width: 14%;
